# c-coap-eap

./: Dockerfile  README.MD  docker-compose.yml
base/demoCA_P256/: cacert.pem  peer-cert.pem  peer-key.pem  server-cert.pem  server-key.pem
base/demoCA_P256/private/: cakey.pem
base/freeradius-server-3.2.3/: .gitignore  radius.sh
base/freeradius-server-3.2.3/raddb/: .gitignore  clients.conf  dictionary  proxy.conf
base/freeradius-server-3.2.3/raddb/certs/: ca.cnf  inner-server.cnf
base/freeradius-server-3.2.3/raddb/mods-available/: eap
base/freeradius-server-3.2.3/src/main/: process.c
base/uoscore-uedhoc/: .gitignore  CMakeLists.txt  makefile_config.mk
base/uoscore-uedhoc-3.0.5-coap-eap/: Makefile  makefile_config.mk
base/uoscore-uedhoc-3.0.5-coap-eap/cddl_models/: cwt_cred.cddl  edhoc_plaintext.cddl  edhoc_th.cddl
base/uoscore-uedhoc-3.0.5-coap-eap/inc/: edhoc_internal.h
base/uoscore-uedhoc-3.0.5-coap-eap/inc/cbor/: cwt_decode.h  cwt_encode.h  cwt_encode_types.h  edhoc_psk_decode_plaintext2_types.h  edhoc_psk_decode_plaintext3a.h  edhoc_psk_decode_plaintext3a_types.h  edhoc_psk_decode_plaintext3b_types.h
base/uoscore-uedhoc-3.0.5-coap-eap/inc/common/: print_util.h
base/uoscore-uedhoc-3.0.5-coap-eap/inc/edhoc/: bstr_encode_decode.h  buffer_sizes.h  ciphertext.h  hkdf_info.h  th.h
base/uoscore-uedhoc-3.0.5-coap-eap/scripts/: cddl2c.sh
base/uoscore-uedhoc-3.0.5-coap-eap/src/cbor/: cwt_decode.c  cwt_encode.c  edhoc_psk_decode_plaintext2.c
base/uoscore-uedhoc-3.0.5-coap-eap/src/common/: cc310_platform.c  crypto_wrapper.c  crypto_wrapper.c_081025
base/uoscore-uedhoc-3.0.5-coap-eap/src/edhoc/: generate_CWT.c  initiator.c  int_encode_decode.c  prk.c  psk_api.c  responder.c  th.c
base/uoscore-uedhoc-3.0.5-coap-eap/test_vectors/: edhoc_test_vectors_p256_v16.h  edhoc_test_vectors_p256_v16.json
base/uoscore-uedhoc/inc/: edhoc.h  psk_api.h
base/uoscore-uedhoc/samples/zephyr_edhoc/initiator-ot/: CMakeLists.txt
base/uoscore-uedhoc/samples/zephyr_edhoc/responder-ot/: CMakeLists.txt
base/uoscore-uedhoc/scripts/: json2c.py
base/uoscore-uedhoc/test_vectors/: psks_r.txt
(+92 files in other folders)
